--- a/.github/workflows/build-and-test-0.11.0.yml
+++ b/.github/workflows/build-and-test-0.11.0.yml
@@ -11,7 +11,7 @@ on:
       - LICENSE
       - README.md
       - .github/**
-      - '!.github/workflows/build-and-test.yml'
+      - '!.github/workflows/build-and-test-0.11.0.yml'
       - .vscode/**
   pull_request:
     paths-ignore:
@@ -21,7 +21,7 @@ on:
       - LICENSE
       - README.md
       - .github/**
-      - '!.github/workflows/build-and-test.yml'
+      - '!.github/workflows/build-and-test-0.11.0.yml'
       - .vscode/**
 
 concurrency:
@@ -38,6 +38,8 @@ jobs:
 
       - name: Setup zig
         uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: 0.11.0
 
       - name: Lint
         run: zig fmt --check .
