--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: ['master', '0.11.0']
+        version: ['master']
 
     steps:
       - uses: actions/checkout@v4
