--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -30,14 +30,19 @@ concurrency:
 
 jobs:
   build-and-test:
-    name: Build zig project and run tests
+    name: Build & test w/zig
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ['master']
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup zig
         uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: ${{ matrix.version }}
 
       - name: Lint
         run: zig fmt --check .
