--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -54,8 +54,8 @@ jobs:
 
       - name: Install kcov
         run: |
-          sudo apt update \
-          sudo apt install -y kcov
+          sudo apt-get update \
+          sudo apt-get install -y kcov
 
       - name: Generate coverage reports
         run: kcov $PWD/coverage ./zig-cache/o/*/test
