--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Install kcov
         run: |
-          sudo apt-get update \
+          sudo apt-get update
           sudo apt-get install -y kcov
 
       - name: Generate coverage reports
