ci: fix runs on

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -33,9 +33,10 @@ concurrency:
 jobs:
   build-and-test:
     name: Build & test w/zig
-    runs-on: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         version: ['master']
 
     steps:
