--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -54,14 +54,17 @@ jobs:
         run: zig build test
 
       - name: Install kcov
+        if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y kcov
 
       - name: Generate coverage reports
+        if: matrix.os == 'ubuntu-latest'
         run: kcov $PWD/coverage ./zig-cache/o/*/test
 
       - name: Upload coverage reports to Codecov
+        if: matrix.os == 'ubuntu-latest'
         uses: codecov/codecov-action@v3
         with:
           directory: ./coverage/
